[workspace.package]
version = "26.7.44"
authors = ["Sean Chatman <sean@chatmangpt.com>"]
edition = "2021"
repository = "https://github.com/seanchatmangpt/ggen"
license = "MIT"

[package]
name = "ggen"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["cli", "code-generation", "rdf", "templates"]
homepage = "https://github.com/seanchatmangpt/ggen"
categories = ["development-tools", "command-line-utilities"]
description = """
ggen is a deterministic, language-agnostic code generation framework that treats software artifacts as projections of knowledge graphs.
"""
include = [
    "/Cargo.toml",
    "src/**/*",
    "templates/**/*",
    "build.rs",
    "/LICENSE",
    "/README.md",
    "/CHANGELOG.md",
    "scripts/generate_registry_hashes.rs",
]
# autobins = false (2026-07-16, v26.7.16 CLI-routing flip): this package's own `[[bin]]
# name = "ggen"` (formerly here, now removed) was a byte-identical duplicate of
# ggen-cli-lib's `[[bin]] name = "ggen"` -- both `main.rs` files just delegated to
# `ggen_cli_lib::cli_match()`. That duplicate was a real, pre-existing bin-name collision
# within this workspace (harmless for local `cargo build`, but meant the two packages raced
# for `target/debug/ggen`). It also meant this package's OWN publish required resolving
# `ggen-cli-lib` from the registry -- and ggen-cli-lib is now correctly `publish = false`
# (it has a real, functional dependency on ggen-engine, which can never be published; see
# ggen-cli-lib's own Cargo.toml comment and task #35 in the migration session tracker), so
# a real bin target here made `cargo publish --dry-run -p ggen` unresolvable forever.
# `src/main.rs` stays on disk (fix-forward doctrine, not deleted) but is no longer built from
# this package -- the canonical "ggen" binary is now built solely from ggen-cli-lib
# (`cargo build -p ggen-cli-lib --bin ggen`, wired into the `GGEN` justfile variable). This
# package (`ggen` on crates.io) is now a pure library crate: `cargo add ggen` continues to
# work; `cargo install ggen` no longer builds a CLI binary from this specific package.
autobins = false

# CI-portable replacement for the stale, macOS-arm64-only Mach-O binary that used to be
# committed directly at scripts/generate_registry_hashes (ENOEXEC on Linux CI runners --
# see tests/e2e_marketplace.rs::test_hash_generation, the only consumer). The real logic
# always lived in scripts/generate_registry_hashes.rs; it just was never wired as a real
# Cargo binary target, so nothing rebuilt it for the host running the test.
[[bin]]
name = "generate_registry_hashes"
path = "scripts/generate_registry_hashes.rs"
test = false
doc = false

[workspace]
members = [
  "crates/ggen-config",
  "crates/ggen-marketplace",
  "crates/ggen-cli",
  "crates/ggen-graph",
  "crates/ggen-lsp",
  # ggen-core replacement engine (docs/jira/v26.7.16/): vendored, renamed copy
  # of ~/praxis/crates/ggen (see 01-PUBLISH-SAFETY-AND-CRATE-RENAME.md) plus
  # its two direct dependencies, also vendored so migration-specific edits
  # (e.g. ReceiptRecord.signature_hex) land here, not upstream in ~/praxis.
  # Landed inert in this pass -- no consumer references them yet.
  "crates/ggen-engine",
  "crates/praxis-core",
  "crates/praxis-graphlaw",
  "crates/powl2-decompose",
  "crates/chicago-tdd-tools",
  "crates/bcinr-pddl",
  "crates/bcinr-mfw-ir",
  # Genesis kernel crates (pure Rust, IO-free)
  "crates/genesis-types-v2",
  "crates/genesis-core-v2",
  "crates/cpmp",
  "crates/ggen-cheat-scanner",
  # ARCHIVED out of the v26.5.29 build boundary (SETTLEMENT-CHECK-1): this example
  # drifted from its own types in a prior release (ValidationAgent missing the
  # `agent_type` field; async fns misusing `?`) and does not compile under
  # --all-targets. Nothing depends on it. A broken member is a small Oracle Gap
  # ("in the build" but not buildable), so it leaves the boundary. Code preserved
  # on disk (non-deletion doctrine); re-add after repair.
  # "examples/7-agent-validation",
  ]
# `crates/ggen-core` (2026-07-17, ggen-core removal, docs/jira/v26.7.16/14-GGEN-CORE-REMOVAL-PROPOSAL.md):
# fully deleted, not merely disconnected. It spent from 2026-07-16 to 2026-07-17 in `exclude`
# below (disconnected but kept on disk); that interim state is now closed out per the
# migration ticket set's own Phase 6/7. Git history retains the code if it's ever needed.
exclude = ["examples/7-agent-validation"]
resolver = "2" # Use new resolver for better dependency resolution

# Workspace-wide dependencies for version consistency
[workspace.dependencies]
serial_test = "3.2"
lsp-max = "26.6.9"
lsp-max-protocol = "26.6.9"
lsp-max-macros = "26.6.9"
lsp-max-client = "26.6.9"
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "json",
  "ansi",
] }
clap = { version = "4.5", features = ["derive"] }
clap-noun-verb = "=26.7.4"
clap-noun-verb-macros = "=26.7.4"
once_cell = "1.19"
# default-features = false + explicit charset/http2/system-proxy (2026-07-22):
# reqwest 0.12's own `default = ["default-tls", "charset", "http2",
# "system-proxy"]` was staying enabled ADDITIONALLY alongside the
# already-explicit "rustls-tls" below (Cargo features are additive, not a
# replacement, unless default-features is disabled) -- meaning every
# workspace member using this shared spec compiled BOTH TLS backends,
# pulling in native-tls -> openssl-sys on Linux even though rustls-tls was
# the only one anyone actually asked for. This broke cross-compiling the
# release binary for aarch64-unknown-linux-gnu (missing target-arch OpenSSL
# dev headers on the runner; found via a real release.yml run,
# 29915682895) -- confirmed root cause by reading reqwest 0.12.28's own
# Cargo.toml locally. Re-adding charset/http2/system-proxy explicitly so
# nothing else default provided is lost, dropping only default-tls.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "charset", "http2", "system-proxy"] }
tempfile = "3.23"
futures = "0.3"
futures-util = "0.3"
uuid = { version = "1.18", features = ["v4", "serde"] }
indexmap = { version = "2.7", features = ["serde"] }
tera = "1.20"
oxigraph = { version = "0.5.8", features = ["rdf-12"] }
toml = "1.1.0"
serde_yaml = "0.9"
hex = "0.4"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
blake3 = "1.5"
hashbrown = "0.15"
smallvec = "1.13"
rustc-hash = "2.0"
itertools = "0.13"
bcinr = "26.4.22"
urlencoding = "2.1"
wasm4pm-compat = "26.6"
cargo-cicd = { git = "https://github.com/seanchatmangpt/cargo-cicd", branch = "main" }

rayon = "1.11"
regex = "1.12"
log = "0.4"
notify = "7.0"
testcontainers = "0.27"
testcontainers-modules = "0.15"
notify-debouncer-full = "0.4"
assert_cmd = "2.0"
predicates = "3.1"
rig-core = "0.15.1"

# Workspace-local crates (use workspace = true pattern in workspace members)
# NOTE: v26.5.29 unified release
# ggen-core (2026-07-16, ggen-core disconnect, T054-T058): removed. ggen-core
# is no longer a workspace member (see [workspace] exclude above) and no
# remaining workspace member has a real dependency edge on it -- every real
# consumer was ported or gated behind the `ggen-core-retired` feature (see
# cmds/mod.rs and crates/ggen-cli/Cargo.toml). crates/ggen-core/ itself is
# untouched on disk, per this project's fix-forward / non-deletion doctrine.
ggen-cli-lib = { path = "crates/ggen-cli", version = "26.7.2" }
ggen-graph = { path = "crates/ggen-graph", version = "26.7.2" }
# ggen-core replacement engine dependencies (specs/014-ggen-core-replacement,
# docs/jira/v26.7.16/10-ROOT-PACKAGE-TEST-MIGRATION.md, T051-T053): root
# package/tests/examples/benches re-point away from ggen_core:: onto these,
# file by file, as each file's specific symbols land a real port destination.
ggen-config = { path = "crates/ggen-config", version = "26.7.2" }
ggen-marketplace = { path = "crates/ggen-marketplace", version = "26.7.2" }
ggen-engine = { path = "crates/ggen-engine", version = "26.7.13" }

# Genesis kernel crates (pure Rust, IO-free — A = μ(O) foundation)
genesis-types = { path = "crates/genesis-types-v2", version = "26.7.2" }
genesis-core-v2 = { path = "crates/genesis-core-v2", version = "26.7.2" }

# A2A Protocol Integration (Agent-to-Agent protocol) - using local a2a-generated
# The vendor a2a-rs is for reference only - we use our generated types

# A2A Registry: Multi-agent orchestration registry


# ggen-codegen: Generic code generation framework (trait-based, zero-cost abstractions)

# DORMANT: ggen-yawl: YAWL workflow generation from industry ontologies
# ggen-yawl = { path = "crates/ggen-yawl", version = "26.5.4" }  # crate not yet activated


# OpenTelemetry dependencies (make optional at crate level, not workspace level)
opentelemetry = { version = "0.31" }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
tracing-opentelemetry = { version = "0.32" }

# CLI Enhancement libraries
indicatif = "0.18"
console = "0.16"

# Testing libraries
proptest = "1.8"
# `cli-proof` deliberately dropped from this shared feature set (2026-07-16, discovered via
# `cargo publish --dry-run -p ggen`): the published chicago-tdd-tools 26.7.1 doesn't have that
# feature yet. Root package is the ONLY consumer of this shared `{ workspace = true }`
# definition (confirmed via grep) and has zero cli_proof/CliHarness usage in its own tests/ --
# every real cli-proof consumer (ggen-engine, ggen-cli, praxis-graphlaw) declares its own
# separate chicago-tdd-tools dependency directly, not through this shared entry. Keeping
# `cli-proof` here served no one and blocked `cargo publish --dry-run -p ggen` on a feature
# root never uses.
#
# 2026-07-17: switched from the published registry version to the vendored local copy at
# crates/chicago-tdd-tools (copied from /Users/sac/chicago-tdd-tools's library source only --
# not its tests/examples/benches/docs -- as part of removing every absolute machine-local
# Cargo path dependency from this workspace, PR #255). This crate is `publish = false`, so it
# never risks the real chicago-tdd-tools' crates.io identity. Once cli-proof is published
# upstream, this can point back at a plain `version = "..."` and the vendored copy can be
# dropped -- tracked in tasks.md.
chicago-tdd-tools = { path = "crates/chicago-tdd-tools", version = "26.7.1", features = ["testing-extras", "testcontainers"] }
fake = "2.9"
tokio-test = "0.4"

# Concurrency primitives
parking_lot = "0.12"

# Benchmarking (used by genesis-core-v2)
criterion = { version = "0.5", features = ["html_reports"] }

# AI integration
genai = "0.5"

# Force base64 version to resolve duplicate dependency issue
# config -> ron -> base64 0.21.7 conflicts with reqwest -> base64 0.22.1
base64 = "0.22"

# ===================================================================
# DEPENDENCY DEDUPLICATION (Phase 1 - Critical)
# Added 2026-01-24 to fix 160 duplicate versions
# Target: Reduce build time from >600s to <400s (33% improvement)
# Reference: examples/factory-paas/DEPENDENCY_DEDUPLICATION_PLAN.md
# ===================================================================

# Web frameworks (Critical - highest transitive impact)
# axum: 3 versions → 1 (reduces ~50-80 transitive dependencies)
# tonic: 2 versions → 1 (reduces ~30-50 transitive dependencies)
axum = "0.8"
axum-core = "0.5"
tonic = "0.14"

# Proc-macros (High impact - compilation time reduction)
# derive_more: 3 versions → 1 (v0.99, v1.0, v2.1 consolidated)
# darling ecosystem: 2 versions → 1 (v0.20, v0.21 consolidated)
derive_more = "1.0"
darling = "0.21"
darling_core = "0.21"
darling_macro = "0.21"

# Utilities (Moderate impact - direct dependencies)
# dashmap: 2 versions → 1 (v26.5.21.5, v26.5.21 consolidated)
# bitflags: 3 versions → 1 (consolidated)
# config: 2 versions → 1 (consolidated, default-features=false to allow customization)
# convert_case: 2 versions → 1 (consolidated)
dashmap = "6.1"
bitflags = "2.10"
config = { version = "0.15", default-features = false, features = ["toml"] }
convert_case = "0.10"

# SQLite version patch - resolve conflict between a2a-rs (0.8) and ggen-api (0.7)
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }

# Maximized linting configuration (Rust 1.78+)
# **Poka-Yoke Design**: Warnings are treated as errors to prevent defects at compile time.
# Type-first thinking: Compiler enforces correctness. If it compiles, invariants are enforced.
# Prevention is better than detection - catch issues at compile time, not runtime.
# Note: Individual lint configuration is done via attributes in code
# This section sets global lint levels
[workspace.lints.rust]
warnings = "allow"  # Warn-first mode: inventory before enforcing
unsafe_code = "warn"
missing_docs = "allow"  # Allow missing docs during warn-first phase
dead_code = "allow"
unused_variables = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(benchmark_mode)'] }

[workspace.lints.clippy]
# **Warn-first mode** (Phase B.1): Inventory violations before enforcing.
# These will be flipped to "deny" after fixes are applied (Phase B.2).
# Type-first thinking: Use compiler as design tool to enforce correctness.
# Prevention is better than detection - catch issues at compile time, not runtime.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Critical lints for Poka-Yoke - keep as deny to prevent fake-success macros
# These have higher priority (0) and will override the groups
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"

# Allow multiple crate versions due to complex dependency tree
multiple_crate_versions = "allow"

# Allow cargo metadata lints for internal workspace crates
# Internal crates don't need full publish-ready metadata
cargo_common_metadata = "allow"

# Allow redundant feature names (e.g., "use-a2a-rs" prefix is intentional)
redundant_feature_names = "allow"

# Allow noisy pedantic lints that generate hundreds of false positives
# These are useful ideals but impractical to enforce across 30+ crates
must_use_candidate = "allow"
missing_const_for_fn = "allow"
module_name_repetitions = "allow"
struct_field_names = "allow"
similar_names = "allow"
too_many_lines = "allow"
type_repetition_in_bounds = "allow"
new_without_default = "allow"
useless_format = "allow"
useless_vec = "allow"
redundant_closure = "allow"
or_fun_call = "allow"
manual_strip = "allow"
map_unwrap_or = "allow"
cloned_instead_of_copied = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_lazy_continuation = "allow"
doc_link_with_quotes = "allow"
unneeded_field_pattern = "allow"
collapsible_if = "allow"
explicit_write = "allow"
checked_conversions = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
format_push_string = "allow"
self_named_constructors = "allow"
needless_return = "allow"
derivable_impls = "allow"
manual_range_contains = "allow"
manual_let_else = "allow"
iter_without_into_iter = "allow"
if_then_some_else_none = "allow"
unused_self = "allow"
redundant_field_names = "allow"
assigning_clones = "allow"
manual_is_multiple_of = "allow"
manual_clamp = "allow"
single_match_else = "allow"
implicit_clone = "allow"
inline_always = "allow"
match_bool = "allow"
match_same_arms = "allow"
redundant_pattern = "allow"
redundant_else = "allow"
string_add = "allow"
string_add_assign = "allow"
bool_to_int_with_if = "allow"
box_collection = "allow"
clone_on_copy = "allow"
# Additional pedantic lints that are noisy across 30+ crates
unnecessary_to_owned = "allow"
map_identity = "allow"
option_map_or_none = "allow"
useless_asref = "allow"
unnecessary_lazy_evaluations = "allow"
wildcard_imports = "allow"
unsafe_derive_deserialize = "allow"
default_trait_access = "allow"
filter_map_next = "allow"
needless_continue = "allow"
needless_pass_by_value = "allow"
ptr_arg = "allow"
trivially_copy_pass_by_ref = "allow"
semicolon_if_nothing_returned = "allow"
uninlined_format_args = "allow"
unreadable_literal = "allow"
let_and_return = "allow"
needless_question_mark = "allow"
redundant_pub_crate = "allow"
single_component_path_imports = "allow"
shadow_unrelated = "allow"
blocks_in_conditions = "allow"
float_cmp = "allow"
match_wild_err_arm = "allow"
indexing_slicing = "allow"
string_lit_as_bytes = "allow"
fn_params_excessive_bools = "allow"
from_over_into = "allow"
get_first = "allow"
if_not_else = "allow"
items_after_statements = "allow"
mixed_read_write_in_expression = "allow"
multiple_inherent_impl = "allow"
naive_bytecount = "allow"
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"
needless_doctest_main = "allow"
needless_range_loop = "allow"
needless_update = "allow"
neg_multiply = "allow"
option_option = "allow"
pattern_type_mismatch = "allow"
print_literal = "allow"
print_with_newline = "allow"
recursive_format_impl = "allow"
ref_option_ref = "allow"
same_item_push = "allow"
stable_sort_primitive = "allow"
try_err = "allow"
tuple_array_conversions = "allow"
type_complexity = "allow"
unit_arg = "allow"
unnecessary_cast = "allow"
unnecessary_filter_map = "allow"
unnecessary_fold = "allow"
unnecessary_join = "allow"
unnecessary_mut_passed = "allow"
unnecessary_operation = "allow"
unnecessary_sort_by = "allow"
unnecessary_wraps = "allow"
unused_async = "allow"
unused_unit = "allow"
upper_case_acronyms = "allow"
vec_init_then_push = "allow"
wildcard_enum_match_arm = "allow"
zero_sized_map_values = "allow"
empty_enum_variants_with_brackets = "allow"
enum_glob_use = "allow"
equatable_if_let = "allow"
explicit_auto_deref = "allow"
flat_map_option = "allow"
format_in_format_args = "allow"
from_iter_instead_of_collect = "allow"
implied_bounds_in_impls = "allow"
inconsistent_struct_constructor = "allow"
invalid_upcast_comparisons = "allow"
iter_not_returning_iterator = "allow"
large_digit_groups = "allow"
large_futures = "allow"
large_stack_arrays = "allow"
large_types_passed_by_value = "allow"
let_underscore_untyped = "allow"
linkedlist = "allow"
lossy_float_literal = "allow"
manual_assert = "allow"
manual_bits = "allow"
manual_instant_elapsed = "allow"
manual_is_ascii_check = "allow"
manual_ok_or = "allow"
manual_rem_euclid = "allow"
manual_rotate = "allow"
manual_saturating_arithmetic = "allow"
manual_string_new = "allow"
many_single_char_names = "allow"
map_err_ignore = "allow"
map_flatten = "allow"
mem_forget = "allow"
min_ident_chars = "allow"
missing_fields_in_debug = "allow"
missing_trait_methods = "allow"
mixed_case_hex_literals = "allow"
module_inception = "allow"
mutex_atomic = "allow"
non_send_fields_in_send_ty = "allow"
nonstandard_macro_braces = "allow"
only_used_in_recursion = "allow"
panic_in_result_fn = "allow"
path_buf_push_overwrite = "allow"
precedence = "allow"
ptr_as_ptr = "allow"
pub_underscore_fields = "allow"
question_mark_used = "allow"
range_minus_one = "allow"
range_plus_one = "allow"
rc_buffer = "allow"
redundant_clone = "allow"
redundant_closure_for_method_calls = "allow"
redundant_locals = "allow"
redundant_slicing = "allow"
ref_binding_to_reference = "allow"
rest_pat_in_fully_bound_structs = "allow"
return_and_then = "allow"
same_name_method = "allow"
seek_from_current = "allow"
separated_literal_suffix = "allow"
should_implement_trait = "allow"
suspicious_operation_groupings = "allow"
suspicious_to_owned = "allow"
suspicious_xor_used_as_pow = "allow"
tests_outside_test_module = "allow"
trailing_empty_array = "allow"
trait_duplication_in_bounds = "allow"
undocumented_unsafe_blocks = "allow"
unneeded_wildcard_pattern = "allow"
unnecessary_box_returns = "allow"
unnecessary_self_imports = "allow"
unnecessary_struct_initialization = "allow"
unused_peekable = "allow"
unused_rounding = "allow"
unwrap_in_result = "allow"
while_let_on_iterator = "allow"
wrong_self_convention = "allow"
write_literal = "allow"
zombie_processes = "allow"

# renamed to needless_borrow (already allowed)

# Additional allows for noisy pedantic/nursery lints
field_reassign_with_default = "allow"
get_unwrap = "allow"
manual_filter = "allow"
manual_find_map = "allow"
vec_box = "allow"
manual_next_back = "allow"
empty_line_after_doc_comments = "allow"
doc_markdown = "allow"
return_self_not_must_use = "allow"
double_must_use = "allow"
test_attr_in_doctest = "allow"
inherent_to_string = "allow"
unwrap_or_default = "allow"
use_self = "allow"
len_zero = "allow"
significant_drop_tightening = "allow"
double_ended_iterator_last = "allow"
iter_cloned_collect = "allow"
map_entry = "allow"
manual_contains = "allow"
manual_inspect = "allow"
map_clone = "allow"
unnecessary_map_or = "allow"
case_sensitive_file_extension_comparisons = "allow"
collection_is_never_read = "allow"
borrowed_box = "allow"
bool_comparison = "allow"
manual_abs_diff = "allow"
option_if_let_else = "allow"
unnecessary_literal_bound = "allow"
needless_for_each = "allow"
explicit_iter_loop = "allow"

# ===================================================================
# PROC-MACRO DUPLICATION ANALYSIS (Updated 2026-01-24)
# ===================================================================
# After updating genai to 0.5 and centralizing in workspace.dependencies:
#
# derive_more duplicates (3 versions):
#   - v2.1.1: genai (production) - unavoidable, genai's choice
#   - v1.0.0: value-ext ← genai (production, transitive) - unavoidable
#   - v0.99.20: cucumber (dev-only) - ACCEPTABLE
#
# darling duplicates (2 versions):
#   - v0.21.3: serde_with_macros ← genai (production, transitive)
#   - v0.20.11: dummy ← fake ← chicago-tdd-tools (dev-only) - ACCEPTABLE
#
# Impact: 2 production proc-macro duplicates from genai's inconsistent dep tree
# These are unavoidable without forking genai or value-ext.
# Dev-only duplicates (cucumber, chicago-tdd-tools) are acceptable.
# ===================================================================
[features]
default = []
nightly = []
termlog = []
journald = []
syslog = []
london_tdd = []
integration = []  # Enable workspace-level integration tests (requires external services/missing crates)
# `experimental` no longer forwards to ggen-cli-lib (2026-07-16, publish-safety fix): root
# dropped its ggen-cli-lib dependency entirely (see `autobins = false` comment above), so a
# `pkg/feature` forward to a package that's no longer a dependency would be a hard Cargo.toml
# error. The one real consumer (tests/otel_validation/capabilities.rs) is now gated behind
# `root-ggen-cli-lib-tests` instead (see that feature below) pending a real rewrite against
# ggen_engine::verbs::handlers. Kept as an empty placeholder so existing
# `--features experimental` invocations don't hard-error, just no longer do anything here.
experimental = []
# Gates the handful of root tests/ files that used to call ggen_cli_lib::* directly (now
# archived, see their own file-header comments) -- root no longer depends on ggen-cli-lib at
# all, since ggen-cli-lib is `publish = false` (real dependency on ggen-engine) and root must
# stay publishable. Off by default; there is currently no working implementation behind this
# feature to enable, it exists only so the `#![cfg(...)]` gates compile cleanly.
root-ggen-cli-lib-tests = []
# `a2a-integration-tests` empty placeholder (2026-07-16, publish-safety fix, revised): a
# previous version of this comment forwarded `ggen-lsp/a2a` here, off-by-default, on the
# theory that an optional/inactive feature-forward wouldn't block publish. Empirically wrong,
# verified via `cargo publish --dry-run -p ggen`: it failed identically with the forward
# present but disabled -- Cargo's publish resolver checks every possible feature/dependency
# combination the manifest COULD produce, not just the active defaults, so ANY mention of
# `ggen-lsp/a2a` anywhere in this manifest blocks publish for as long as the published
# ggen-lsp lacks that feature. There is no Cargo.toml-only way to keep this reachable from
# root while staying publishable. Root's `ggen-lsp` dependency (and the a2a feature request)
# is removed entirely; `tests/integration/test_telco_routing.rs` and `benches/a2a_bench.rs`
# are gated behind this now-permanently-empty feature (their own file headers explain why) --
# their real home is crates/ggen-lsp/tests or crates/ggen-lsp/benches, where ggen-lsp's a2a
# feature is native/local and doesn't need external registry resolution to test.
a2a-integration-tests = []
# Gates the root tests/ files that exercise ggen-core's internal library
# surface directly (Graph/GraphStore, Pipeline, Generator, Template,
# SimpleTracer, pipeline_engine::pipeline, syntax_validator, etc.) rather
# than through any CLI noun. ggen-core is being disconnected from the
# workspace (root [workspace] members no longer lists crates/ggen-core;
# root's own [dependencies] no longer has a real ggen-core edge) and no
# ggen-engine/ggen-graph equivalent exists for the large majority of these
# symbols (verified via workspace-wide search, 2026-07-16 investigation).
# Off by default; there is currently no working implementation behind this
# feature to enable, it exists only so the `#![cfg(...)]` gates on the
# archived files compile cleanly. Mirrors ggen-cli's own
# `ggen-core-retired` feature (crates/ggen-cli/Cargo.toml).
ggen-core-retired = []
# OpenTelemetry instrumentation (optional - adds ~200 dependencies)
# Previously forwarded to `ggen-core/otel`; ggen-core is no longer a
# dependency of this package (2026-07-16, ggen-core disconnect, T054-T058;
# see [dependencies] below and the `ggen-core-retired` feature above), so
# that forward is removed. Kept as an empty placeholder so existing
# `--features otel` invocations don't hard-error, just no longer do
# anything here -- no other workspace member forwards its own `otel`
# feature from this package's `otel` name today.
otel = []
[dependencies]
# ggen-core (2026-07-16, ggen-core disconnect, T054-T058): removed. Every
# ggen_core::-referencing root test file (tracing.rs, graph_core_tests.rs,
# template_systems_tests.rs, validate_marketplace_rdf.rs,
# generator_core_tests.rs, fixture_validation_proof.rs, contract/pipeline.rs)
# is now gated behind the `ggen-core-retired` feature (see [features] above)
# -- none had a ggen-engine/ggen-graph port destination (verified via
# workspace-wide search). crates/ggen-core/ itself is untouched on disk, per
# this project's fix-forward / non-deletion doctrine.
# ggen-cli-lib intentionally NOT a dependency here (removed 2026-07-16, publish-safety fix):
# it was needed only for root's own `[[bin]] "ggen"` (a byte-identical duplicate of
# ggen-cli-lib's own binary, now removed -- see `autobins = false` comment above) and a
# handful of root tests/ files (now gated behind `root-ggen-cli-lib-tests`, see [features]).
# ggen-cli-lib is now `publish = false` (real dependency on ggen-engine, which can never
# resolve on crates.io), so a real dependency edge here would make `cargo publish --dry-run
# -p ggen` unresolvable forever, the same class of failure this whole fix chain started from.
# Re-point targets for tests/examples/benches (T051-T053, superseded
# 2026-07-16 by the ggen-core disconnect, T054-T058): the ggen_core::
# -referencing root test files that had no port destination (graph, generator,
# pipeline, template, simple_tracing, syntax_validator, pipeline_engine, etc.)
# are now gated behind the `ggen-core-retired` feature (see [features] above)
# instead of waiting on a future port -- ggen-core is disconnected from the
# workspace, not deleted; re-enable that feature once a real port lands.
ggen-config = { workspace = true }
ggen-marketplace = { workspace = true }
# ggen-engine intentionally NOT a dependency here (removed 2026-07-16, discovered via
# `cargo publish --dry-run -p ggen`): ggen-engine -> praxis-core/praxis-graphlaw carry hard
# absolute-path deps on sibling repos (/Users/sac/bcinr/crates/*, /Users/sac/wasm4pm-compat)
# that only exist on this machine, so ggen-engine is `publish = false` and can never resolve
# on crates.io. A real dependency edge here broke `cargo publish --dry-run -p ggen` with
# "no matching package named `ggen-engine` found". Confirmed zero internal consumers (grep
# for `ggen::core::` across src/tests/examples/benches/crates returned nothing) before
# removing -- the T051 `pub use ggen_engine as core;` re-export in src/lib.rs is reverted
# alongside this for the same reason. ggen-cli (workspace = true below) still needs
# ggen-engine directly for the CLI routing flip; that crate's own publishability is a
# separate, still-open question (see docs/jira/v26.7.16/ tickets 01/02).
chrono = { workspace = true }
human-panic = "2.0.3"
better-panic = "0.3.0"
log = "0.4.28"
env_logger = "0.11"
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.23"
tera = "1.20"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.18", features = ["v4"] }
genai = { workspace = true }
tracing-subscriber = "0.3"
# Note: OpenTelemetry dependencies are optional at the crate level (ggen-core, etc.)
# The root package doesn't directly use OTEL, so these are not included here.
# Enable OTEL via: cargo build --features otel (which forwards to ggen-core/otel)
# Example definitions removed - examples now discovered automatically by Cargo
[dev-dependencies]
# ggen-lsp intentionally NOT a dependency here (removed 2026-07-16, publish-safety fix): its
# only real consumers were tests/integration/test_telco_routing.rs and benches/a2a_bench.rs
# (both import ggen_lsp::a2a_mcp::*, confirmed via grep -- nothing else in root's src/tests/
# examples/benches touches ggen_lsp:: at all), and BOTH need the `a2a` feature, which isn't
# published to crates.io yet for ggen-lsp 26.7.2/26.7.3. A path+version dependency on
# ggen-lsp with `a2a` requested anywhere in this manifest (even behind an inactive optional
# feature-forward -- empirically tested, see the `a2a-integration-tests` [features] comment)
# makes `cargo publish --dry-run -p ggen` unresolvable for as long as that external gap
# persists. Both files are gated behind the now-permanently-empty `a2a-integration-tests`
# feature with their own ARCHIVED headers -- their real home is crates/ggen-lsp's own
# tests/benches, where ggen-lsp's a2a feature is native/local, not a registry dependency.
assert_cmd = "2.0.17"
predicates = "3.1.3"
serde_json = "1.0"
tempfile = "3.23"
anyhow = "1.0"
oxigraph = { version = "0.5.8", features = ["rdf-12"] }
# BDD testing framework
cucumber = "0.20"
assert_fs = "1.1"
mockito = "1.7"
insta = "1.43"
serial_test = "3.2"
md5 = "0.8"
shell-words = "1.1"
# E2E test dependencies
toml = "1.1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
genai = { workspace = true }
proptest.workspace = true
# chicago-tdd-tools = { workspace = true, features = ["testcontainers"] }
# Note: chicago-tdd-tools commented for cross-platform compatibility
testcontainers.workspace = true
testcontainers-modules.workspace = true
rand = "0.8"
mockall = "0.13"
fake = "2.9"
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chicago-tdd-tools = { workspace = true }
# Performance benchmarking
criterion = { version = "0.7", features = ["html_reports"] }
once_cell = "1.20"
lazy_static = "1.4"
fastrand = "2.3"
# Process Mining for workflow analytics
process_mining = "0.2"
# Cryptographic hashing for receipt tests
sha2 = "0.10"
# A2A/TPS System Benchmarks
regex = "1.12"
validator = "0.19"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 256          # More parallel compilation units = faster builds
incremental = true           # Enable incremental compilation
split-debuginfo = "unpacked" # Faster debug builds on macOS
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "thin"             # Thin LTO for faster builds, still optimized
debug-assertions = false
codegen-units = 16       # Balance between speed and optimization
strip = true             # Strip symbols for smaller binaries
[profile.test]
opt-level = 0           # Faster test compilation
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 256     # More parallel compilation
incremental = true      # Enable incremental for tests
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
[[bench]]
name = "runtime_overhead"
harness = false
[[bench]]
name = "async_runtime_benchmarks"
harness = false
[[bench]]
name = "memory_profiling"
harness = false
[[bench]]
name = "quick_runtime_validation"
harness = false
[[bench]]
name = "conventions_performance"
harness = false
[[bench]]
name = "marketplace_performance"
harness = false
[[bench]]
name = "cli_startup_performance"
harness = false
[[bench]]
name = "mcp_a2a_benchmarks"
harness = false

[[bench]]
name = "receipt_bench"
harness = false
[[bench]]
name = "a2a_bench"
harness = false
required-features = ["a2a-integration-tests"]
[[bench]]
name = "canonical_bench"
harness = false
# ARCHIVED (ggen-core disconnect, 2026-07-16): drives
# `ggen_core::{generator::GenContext, pipeline::Pipeline, template::Template,
# graph::Graph}` directly (benches/ggen_benchmarks.rs). No
# ggen-engine/ggen-graph equivalent exists (verified via workspace-wide
# search, 2026-07-16 investigation). Gated the same way `a2a_bench` above is
# -- required-features, permanently off by default -- rather than deleted,
# per this project's fix-forward doctrine. File retained on disk untouched.
[[bench]]
name = "ggen_benchmarks"
harness = false
required-features = ["ggen-core-retired"]
# 4 [[example]] blocks removed here (drift-detection-example,
# rdf_template_integration, path_validation_example, rdf_metadata_example;
# 2026-07-17 investigation): all required-features = ["ggen-core-retired"]
# and all imported `ggen_core::` symbols from the crate deleted outright by
# PR #259 ("remove ggen-core, rewrite README from first principles"), which
# left root Cargo.toml's `[[example]]` entries as residue its sweep missed.
# Confirmed zero supported consumers (no test invokes `cargo run/test
# --example` on these names; grep across docs/specs finds only historical
# migration-record mentions, none depending on them working) and confirmed
# each failed to compile with error[E0433] "cannot find module or crate
# `ggen_core`" even with the feature enabled. Source files deleted from
# examples/archive_ggen_core/stray-rs-files/. The `ggen-core-retired`
# feature declaration itself is NOT removed -- it still gates the
# `ggen_benchmarks` bench above and 6 root tests/*.rs files (tracing.rs,
# graph_core_tests.rs, template_systems_tests.rs, validate_marketplace_rdf.rs,
# generator_core_tests.rs, fixture_validation_proof.rs), all of which are the
# same class of ggen_core-referencing dead-by-construction code but were out
# of scope for this pass.
[[test]]
name = "testcontainer_marketplace_git_hooks"
path = "tests/integration/testcontainer_marketplace_git_hooks.rs"
required-features = ["integration"]
[[test]]
name = "full_cycle_container_validation"
path = "tests/integration/full_cycle_container_validation.rs"
required-features = ["integration"]
[[test]]
name = "nextjs_ontology_sync"
path = "tests/integration/nextjs_ontology_sync.rs"
required-features = ["integration"]
[[test]]
name = "marketplace_nextjs_ontology_e2e"
path = "tests/integration/marketplace_nextjs_ontology_e2e.rs"
required-features = ["integration"]
[[test]]
name = "marketplace_package_e2e"
path = "tests/integration/marketplace_package_e2e.rs"
required-features = ["integration"]
[[test]]
name = "lifecycle_tests"
path = "tests/integration/lifecycle_tests.rs"
required-features = ["integration"]
[[test]]
name = "code_generation_tests"
path = "tests/integration/code_generation_tests.rs"
required-features = ["integration"]
[[test]]
name = "cache_tests"
path = "tests/integration/cache_tests.rs"
required-features = ["integration"]
[[test]]
name = "lifecycle_simple_tests"
path = "tests/integration/lifecycle_simple_tests.rs"
required-features = ["integration"]
[[test]]
name = "gemba_walk_verification"
path = "tests/integration/gemba_walk_verification.rs"
required-features = ["integration"]
[[test]]
name = "fmea_risk_assessment"
path = "tests/integration/fmea_risk_assessment.rs"
required-features = ["integration"]
[[test]]
name = "ontology_workflows_hipaa"
path = "tests/integration/ontology_workflows_hipaa.rs"
required-features = ["integration"]
[[test]]
name = "ontology_workflows_multi_cloud"
path = "tests/integration/ontology_workflows_multi_cloud.rs"
required-features = ["integration"]
[[test]]
name = "ontology_workflows_guard_evaluation"
path = "tests/integration/ontology_workflows_guard_evaluation.rs"
required-features = ["integration"]
[[test]]
name = "ontology_workflows_receipts"
path = "tests/integration/ontology_workflows_receipts.rs"
required-features = ["integration"]
[[test]]
name = "ontology_workflows_e2e"
path = "tests/integration/ontology_workflows_e2e.rs"
required-features = ["integration"]
# Security integration tests
# TPS Integration Tests
# Transport layer tests
[[test]]
name = "registry_client_tests"
path = "tests/transport/registry_client_tests.rs"
required-features = ["integration"]
# YAWL Workflow Generation Unit Tests
# YAWL Workflow Generation Receipt Verification Tests
# FIBO Integration Tests for YAWL Workflow Generation
# Process Mining Integration Tests
[[test]]
name = "config_error_conversion_tests"
path = "tests/config_error_conversion_tests.rs"
required-features = ["integration"]
[[test]]
name = "test_telco_routing"
path = "tests/integration/test_telco_routing.rs"
required-features = ["integration", "a2a-integration-tests"]

# ProofPack release-gate tests — run by default, no feature flag required.
# Covers: smoke (CLI boot), invariants (manifest rules), refusal (negative
# paths), and receipts (cryptographic proof). Add tests here as the ProofPack
# matures; these intentionally run without --features integration.
[[test]]
name = "proof"
path = "tests/proof/mod.rs"

[[test]]
name = "contract"
path = "tests/contract/mod.rs"


# ============================================================================
# DEBIAN PACKAGING (cargo-deb)
# ============================================================================
# Enables: dpkg-deb, apt installation
# Build: cargo deb
# Install: sudo dpkg -i target/debian/ggen_0.2.0_amd64.deb
# Or: sudo apt install ./ggen_0.2.0_amd64.deb
[package.metadata.deb]
maintainer = "Sean Chatman <sean@chatmangpt.com>"
copyright = "2026, Sean Chatman <sean@chatmangpt.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
ggen is a language-agnostic, deterministic code generation tool that transforms \
RDF ontologies into reproducible code through SPARQL queries and Tera templates. \
Perfect for generating REST APIs, microservices, database schemas, infrastructure-as-code, \
and multi-language projects from a single specification."""
assets = [
    ["target/release/ggen", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/ggen/", "644"],
    ["LICENSE", "usr/share/doc/ggen/copyright", "644"],
]
changelog = "debian/changelog"
systemd-units = []
conffiles = []
[package.metadata.deb.variants.amd64]
package = "ggen-amd64"
[package.metadata.deb.lintian-overrides]
unused-shlibs = []

# wasm4pm-compat and wasm4pm use #![feature] in their crates.io releases and
# require nightly Rust (which this workspace already pins via rust-toolchain.toml).
# Redirect to seanchatmangpt's repos if the stubs there are ever updated to
# provide the full API needed by lsp-max-runtime.
#
# NOTE on the clap-noun-verb kebab-case fix (--profile-id with --profile_id alias):
# the fix is committed in ~/clap-noun-verb (313ba73). It was NOT integrated here via
# a local [patch.crates-io] because the local checkout (26.5.29, branch
# minimalist-refactor-final) is a divergent WIP that also changed output to
# pretty-printed JSON, breaking 6 graph + 1 init test (compact-JSON assertions) —
# a wide blast radius unsuitable for the release foundation. Land kebab via a
# MINIMAL published clap-noun-verb release on top of the stable 26.5.x line, then
# bump the dep. ggen works today on published 26.5.19 (snake flags).

# 2026-07-17: the [patch.crates-io] override that used to live here (redirecting
# chicago-tdd-tools to /Users/sac/chicago-tdd-tools for the unpublished cli-proof
# feature) is gone -- every real consumer now depends on the vendored copy at
# crates/chicago-tdd-tools directly (a plain path dependency, no patch needed;
# see the workspace.dependencies entry above and PR #255).
